--- a/samvedhna_chatbot/requirements.txt
+++ b/samvedhna_chatbot/requirements.txt
@@ -7,10 +7,10 @@ pyttsx3==2.98
 gtts==2.5.4
 playsound==1.2.2
 audio-recorder-streamlit==0.0.10
-pandas==2.3.0
-matplotlib==3.10.3
-speech_recognition==3.14.3
+pandas==2.1.4
+matplotlib==3.8.2
+SpeechRecognition==3.10.0
 altair==4.2.2
-numpy==2.3.0
-python-dateutil==2.9.0.post0 
+numpy==1.24.3
+python-dateutil==2.8.2
 certifi
