--- a/samvedhna_chatbot/requirements.txt
+++ b/samvedhna_chatbot/requirements.txt
@@ -1,11 +1,12 @@
-streamlit==1.46.0
+streamlit>=1.29.0
 nltk==3.9.1
 deep-translator==1.11.4
 requests==2.32.4
-openai==1.88.0
-numpy==1.26.4
-pandas==2.2.3
-matplotlib==3.8.2
-altair==4.2.2
+openai>=1.0.0
+numpy>=1.26.2
+pandas>=2.1.4
+matplotlib>=3.8.2
+altair>=5.2.0
 python-dateutil==2.8.2
 certifi
+googletrans==3.1.0a0
